--- a/sunset.ipynb
+++ b/sunset.ipynb
@@ -9,13 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +345,7 @@
        "[365 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,78 +359,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "remove 'PM' from time columns"
+    "convert all columns to datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sunsetdata['FW Sunset'] = sunsetdata['FW Sunset'].str.replace(' PM','')\n",
-    "#sunsetdata['CF Sunset'] = sunsetdata['CF Sunset'].str.replace(' PM','')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "replace ':' with '.' "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sunsetdata['FW Sunset'] = sunsetdata['FW Sunset'].str.replace(':','.')\n",
-    "#sunsetdata['CF Sunset'] = sunsetdata['CF Sunset'].str.replace(':','.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "convert object to float"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2022         object\n",
-       "FW Sunset    object\n",
-       "CF Sunset    object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#sunsetdata['FW Sunset'] = sunsetdata['FW Sunset'].astype(float)\n",
-    "#sunsetdata['CF Sunset'] = sunsetdata['CF Sunset'].astype(float)\n",
-    "sunsetdata.dtypes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "convert '2022' column to datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +376,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +509,7 @@
        "[365 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,32 +522,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "add column with ascending values"
+    "plot data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sunsetdata['Number'] = np.arange(sunsetdata.shape[0])\n",
-    "#sunsetdata.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fwdata['FW Sunset'] = pd.to_datetime(fwdata['FW Sunset']).dt.time\n",
-    "#cfdata['CF Sunset'] = pd.to_datetime(cfdata['CF Sunset']).dt.time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -633,26 +546,6 @@
    "source": [
     "sunsetdata.plot(x = '2022', y = ['FW Sunset', 'CF Sunset'])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plt.plot_date(['2022'], ['FW Sunset', 'CF Sunset'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior\n",
-    "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.to_datetime.html\n",
-    "https://stackoverflow.com/questions/41815126/plot-datetime-date-pandas\n",
-    "https://stackoverflow.com/questions/58263983/how-to-plot-date-in-x-axis-time-in-y-axis-with-pandas-matplotlib-and-present-ti\n",
-    "https://stackoverflow.com/questions/20958811/matplotlib-date-on-y-axis"
    ]
   }
  ],
@@ -677,7 +570,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d82ea8c7c79b0b9bd8109cb74dd0acef3c7f0cf058071bc61080534d614d21a6"
+    "hash": "b8f793d26e929a710c8e7620c1cbb24284c5bf614a9a254726a2c2ddf2174085"
    }
   }
  },
